--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "echarts": "^4.2.1",
     "moment": "^2.24.0",
     "vant": "^2.0.2",
     "vue": "^2.6.10",
+    "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
