--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "echarts": "^4.2.1",
+    "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
     "vant": "^2.0.2",
     "vue": "^2.6.10",
